# test_1

./: CMakeLists.txt  INSTRUCTIONS.md  NOTES.md  requirements.txt  АЛГОРИТМ_СТАКАНА.md
calendar_spread/: NOTES.md  main.py
cpp_decoder/: batch_builder.h  decoder.cpp  decoder.h  main.cpp  parquet_writer.cpp  parquet_writer.h  pcap_reader.cpp
cpp_decoder/sbe-generated/: b3-market-data-messages-1.8.0.sbeir
cpp_decoder/sbe-generated/b3_umdf_mbo_sbe/: ClosingPrice_17.h  ExecutionStatistics_56.h  ExecutionSummary_55.h  Fixed8.h  FramingHeader.h  ImbalanceCondition.h  MassDeleteOrders_MBO_52.h  MatchEventIndicator.h  News_5.h  OpenInterest_29.h  Order_MBO_50.h  Percentage9.h  PriceBand_20.h  PriceBand_22.h  PriceOptional.h  SecurityGroupPhase_10.h  SecurityStatus_3.h  SequenceReset_1.h  Sequence_2.h  TextEncoding.h  TradeCondition.h  Trade_53.h  TrdSubType.h  UTCTimestampNanos.h
orderbook/: __init__.py  config.py  data_loader.py  instruments.py  match_event.py  models.py  order_book.py  output_builder.py  progress.py  replay.py
scripts/: build_orderbook.py  collect_instruments.py  convert_arrow_to_csv.py  decode_pcap_to_arrow.py  flatten_parquet.py  generate_codecs.py  generate_codecs.sh
src/b3sbe_py/: __init__.py  headers.py  parser.py  pcap.py  sbe.py  utils.py
src/cpp/core/: batch_builder.h  decoder.cpp  decoder.h  parquet_writer.cpp  parquet_writer.h  pcap_reader.cpp  pcap_reader.h
src/cpp/python/: bindings.cpp
src/sbe-generated/b3_umdf_mbo_sbe/: AuctionImbalance_19.h  ChannelReset_11.h  DeleteOrder_MBO_51.h  EmptyBook_9.h  ForwardTrade_54.h  GroupSizeEncoding.h  HeaderMessage_0.h  HighPrice_24.h  LastTradePrice_27.h  LowPrice_25.h  MaturityMonthYear.h  MessageHeader.h  OpeningPrice_15.h  PacketHeader.h  Percentage.h  Price.h  Price8.h  PriceOffset8Optional.h  QuantityBand_21.h  RatioQty.h  SecurityDefinition_12.h  SecurityDefinition_4.h  SettlPriceType.h  SettlementPrice_28.h  TheoreticalOpeningPrice_16.h  (+5 more)
tests/: test_decoder.py  test_orderbook.py
volatility_momentum_robot/: NOTES.md  __main__.py
